@@ -433,7 +433,8 @@
  `(cdr (the cons (cdr (the cons ,x)))))
 
 (defmacro qcsize (x)
- `(the fixnum (length (the simple-string ,x))))
+ `(the fixnum (length (the #-(or :ecl :gcl)simple-string
+                           #+(or :ecl :gcl)string ,x))))
 
 (defmacro qrefelt (vec ind) `(svref ,vec ,ind))
 
