@@ -1,3 +1,9 @@
+2012-01-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/sf.spad.pamphlet,
+	src/interp/primitives.lisp, src/interp/vmlisp.lisp:
+	Fix type mismatches discovered by ecl.
+
 2012-01-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* Makefile.in, src/algebra/Makefile.in
